# aw-watcher-mpv-sender

./: .gitignore  LICENSE  README.md  pyinstaller.spec  pyproject.toml  setup.py
.github/workflows/: build.yml
aw_watcher_mpv_sender/: __init__.py  __main__.py  config.py  main.py  models.py  sender.py  utils.py
src/aw-watcher-mpv-sender/: __init__.py  config.py  main.py  models.py  sender.py  utils.py
src/watcher-sender/: __init__.py  main.py  models.py  sender.py  utils.py
visualization/: package-lock.json  package.json  tsconfig.json  webpack.config.js
visualization/src/: index.pug  index.ts  models.ts  utils.ts
