[tool.black]
line-length = 120
target-version = ['py310']

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aw-watcher-mpv-sender"
version = "0.1.1"
description = "ActivityWatch watcher for mpv. This is the python component that submits the collected logs to AW. See github for details."
readme = "README.md"
authors = [{ name = "RundownRhino"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["activitywatch","mpv"]
dependencies = [
    "aw-client"
]

[project.urls]
Source = "https://github.com/RundownRhino/aw-watcher-mpv-sender"